# ppt-master

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  pyproject.toml
docs/: 1.md  skill-debugging.md  skill-dependency-migration-plan.md
examples/: README.md
projects/: README.md
skills/ppt-master/: SKILL.md  pyproject.toml  requirements.txt
skills/ppt-master/references/: canvas-formats.md  executor-base.md  executor-general.md  image-generator.md  image-layout-spec.md  shared-standards.md  strategist.md  svg-image-embedding.md
skills/ppt-master/scripts/: README.md  analyze_images.py  batch_validate.py  config.py  finalize_svg.py  gemini_watermark_remover.py  generate_examples_index.py  image_gen.py  project_manager.py  rotate_images.py  runtime_support.py  svg_quality_checker.py  svg_to_pptx.py  total_md_split.py  update_repo.py
skills/ppt-master/scripts/docs/: conversion.md  image.md  project.md  svg-pipeline.md  troubleshooting.md
skills/ppt-master/scripts/source_to_md/: pdf_to_md.py  ppt_to_md.py  web_to_md.cjs  web_to_md.py
skills/ppt-master/scripts/svg_finalize/: crop_images.py  embed_icons.py  embed_images.py  fix_image_aspect.py  flatten_tspan.py  remove_footer.py  svg_rect_to_path.py
skills/ppt-master/scripts/svg_to_pptx/: __init__.py  html_slideshow.py  pptx_cli.py
skills/ppt-master/templates/: README.md
skills/ppt-master/templates/icons/: README.md
skills/ppt-master/templates/layouts/: README.md
skills/ppt-master/workflows/: create-template.md
