[project]
name = "ppt-master"
version = "2.3.0"
description = "AI-generated natively editable PPTX from documents and SVG workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.21",
    "svglib>=1.5.0",
    "reportlab>=4.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
]
